--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -41,17 +41,15 @@
         }
       }
 
-      .buttons {
-        button {
-          padding: 20px;
-          border: 1px solid white;
-          border-radius: 10px;
-          background-color: transparent;
-          color: white;
-          margin-right: 20px;
-          cursor: pointer;
-          font-weight: 300;
-        }
+      .buttons button {
+        padding: 20px;
+        border: 1px solid white;
+        border-radius: 10px;
+        background-color: transparent;
+        color: white;
+        margin-right: 20px;
+        cursor: pointer;
+        font-weight: 300;
       }
 
       img {
@@ -74,11 +72,12 @@
     }
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       object-fit: cover;
-      margin-right: 400px;
-      border-radius: 25%;
+      margin-right: 300px;
+      border-radius: 40%;
+      margin-top: 70px;
     }
   }
 
