--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -33,5 +33,32 @@
         height: 18px;
       }
     }
+
+    .resume {
+      padding: 10px 20px;
+      background-color: #4caf50;
+      border: none;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-right: 500px;
+
+      &:hover {
+        background-color: #45a049;
+      }
+
+      &:focus {
+        outline: none;
+      }
+
+      @include mobile {
+        display: none;
+      }
+    }
   }
 }
