--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -11,6 +11,8 @@
 
   h1 {
     font-size: 100px;
+    position: relative;
+    z-index: 4;
 
     @include mobile {
       font-size: 72px;
@@ -19,7 +21,7 @@
   }
 
   .mountains {
-    background-image: url("/mountains.png");
+    background-image: url("");
     background-size: cover;
     background-position: bottom;
     width: 100%;
@@ -45,8 +47,8 @@
     }
   }
   .stars {
-    background-image: url("/stars.png");
-    background-size: cover;
+    background-image: url("/pngegg.png");
+    background-size: contain;
     background-position: bottom;
     width: 100%;
     height: 100%;
